--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
+    "@microsoft/signalr": "^6.0.1",
     "abort-controller": "^3.0.0",
-    "node-fetch": "^2.6.6"
+    "node-fetch": "^2.6.6",
+    "zen-observable": "^0.8.15"
   }
 }
