--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "transpile": "tsc",
     "cleanup": "rm -Rf generated && rm -Rf src/api",
     "build": "npm run cleanup && npm run getspec && npm run generate && npm run jsimport && npm run transpile",
-    "test": "node tests/test.js"
+    "test": "mocha tests --reporter nyan"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +19,7 @@
     "@openapitools/openapi-generator-cli": "^2.4.24",
     "filehound": "^1.17.5",
     "form-data": "^4.0.0",
+    "mocha": "^9.2.0",
     "openapi-typescript-codegen": "^0.16.2",
     "typescript": "^4.5.4"
   },
