--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "transpile": "tsc",
     "cleanup": "rm -Rf generated && rm -Rf src/api",
     "build": "npm run cleanup && npm run getspec && npm run generate && npm run jsimport && npm run transpile",
-    "test": "mocha --parallel tests"
+    "test": "ava --timeout=1m"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@openapitools/openapi-generator-cli": "^2.4.24",
+    "ava": "^4.0.1",
     "filehound": "^1.17.5",
     "form-data": "^4.0.0",
     "mocha": "^9.2.0",
