--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@openapitools/openapi-generator-cli": "^2.4.24",
     "ava": "^4.0.1",
     "filehound": "^1.17.5",
     "form-data": "^4.0.0",
@@ -27,7 +26,6 @@
   "dependencies": {
     "@microsoft/signalr": "^6.0.1",
     "abort-controller": "^3.0.0",
-    "node-fetch": "^2.6.6",
-    "zen-observable": "^0.8.15"
+    "node-fetch": "^2.6.6"
   }
 }
